fix: body <tag>
background image not showing properly

--- a/Src/CSS/style.css
+++ b/Src/CSS/style.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body {
+    height: 100vh;
+    background: no-repeat;
+    background-size: cover;
+    display: flex;
+}
 a{
     text-decoration: none;
 }
